force-app/main/default/objects/Contact/fields/Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Maintenance__c</fullName>
    <label>Maintenance</label>
    <precision>10</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>