force-app/main/default/objects/Contact/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Role__c</field>
            <operation>equals</operation>
            <value>Manager</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Drivers</relationshipLabel>
    <relationshipName>Drivers</relationshipName>
    <type>Lookup</type>
</CustomField>