force-app/main/default/objects/Contact/fields/Manager_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Manager_First_Name__c</fullName>
    <label>Manager First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>