force-app/main/default/objects/Contact/fields/Map_Country__c.field-meta.xml
<CustomField>
    <fullName>Map_Country__c</fullName>
    <label>Map Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USA</fullName>
            </value>
            <value>
                <fullName>CANADA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>