force-app/main/default/objects/Contact/fields/Meeting__c.field-meta.xml
<CustomField>
    <fullName>Meeting__c</fullName>
    <label>Meeting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sent</fullName>
                <default>true</default>
                <label>Sent</label>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Attended</fullName>
            </value>
            <value>
                <fullName>Did Not Attend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>