force-app/main/default/objects/Contact/fields/Meeting_Minimum__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Minimum__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Meeting_Minimum</label>
    <type>Checkbox</type>
</CustomField>