force-app/main/default/objects/Contact/fields/Mileage_for_deduct__c.field-meta.xml
<CustomField>
    <fullName>Mileage_for_deduct__c</fullName>
    <label>Mileage for deduct</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>