force-app/main/default/objects/Contact/fields/mLog_API__c.field-meta.xml
<CustomField>
    <fullName>mLog_API__c</fullName>
    <label>mLog API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>