force-app/main/default/objects/Contact/fields/monthly_compliance_status__c.field-meta.xml
<CustomField>
    <fullName>monthly_compliance_status__c</fullName>
    <description>this picklist will show the monthly compliance status which is defined on the contact based on the value of previous month reimbursement</description>
    <label>monthly compliance status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No – Vehicle Age</fullName>
            </value>
            <value>
                <fullName>No – Vehicle Value</fullName>
            </value>
            <value>
                <fullName>No – Insurance Not Meeting Minimum</fullName>
            </value>
            <value>
                <fullName>No - Insurance Not Provided</fullName>
            </value>
            <value>
                <fullName>No - Mileage</fullName>
            </value>
            <value>
                <fullName>No - Missing Coverage Dates</fullName>
            </value>
            <value>
                <fullName>No – Insurance Card</fullName>
            </value>
            <value>
                <fullName>Expired Insurance</fullName>
            </value>
            <value>
                <fullName>No - Umbrella Policy</fullName>
            </value>
            <value>
                <fullName>No - Insurance Dec Page</fullName>
            </value>
            <value>
                <fullName>No - Mileage &amp; Vehicle Value</fullName>
            </value>
            <value>
                <fullName>No - Mileage &amp; Vehicle Age</fullName>
            </value>
            <value>
                <fullName>No - Mileage &amp; Insurance</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>