force-app/main/default/objects/Contact/fields/Monthly_Fuel_Price__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Fuel_Price__c</fullName>
    <label>Fuel Price per Gallon</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>