force-app/main/default/objects/Contact/fields/New_Compliance_Mileages__c.field-meta.xml
<CustomField>
    <fullName>New_Compliance_Mileages__c</fullName>
    <label>New Compliance Mileages</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>