force-app/main/default/objects/Contact/fields/No_reimbursement_current_year__c.field-meta.xml
<CustomField>
    <fullName>No_reimbursement_current_year__c</fullName>
    <inlineHelpText>count of reimbursment record for current year</inlineHelpText>
    <label>No reimbursement current year</label>
    <summaryFilterItems>
        <field>Employee_Reimbursement__c.Year__c</field>
        <operation>equals</operation>
        <value>2024</value>
    </summaryFilterItems>
    <summaryForeignKey>Employee_Reimbursement__c.Contact_Id__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>