force-app/main/default/objects/Contact/fields/Notification_Date__c.field-meta.xml
<CustomField>
    <fullName>Notification_Date__c</fullName>
    <label>Notification Date</label>
    <type>Date</type>
</CustomField>