force-app/main/default/objects/Contact/fields/Notification_Message__c.field-meta.xml
<CustomField>
    <fullName>Notification_Message__c</fullName>
    <label>Notification Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>