force-app/main/default/objects/Contact/fields/Onboarding_Status__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Status__c</fullName>
    <formula>IF(ISPICKVAL(Insurance__c, &quot;Yes&quot;)  &amp;&amp;  Hello_Sign_Status__c = &apos;signed&apos; &amp;&amp;  Hello_Sign_Admin_Status__c	= &apos;signed&apos; &amp;&amp;  Schedule_Driver_Meeting__c = True , &apos;Yes&apos;, 
 IF(ISPICKVAL(Insurance__c, &quot;Yes&quot;) &amp;&amp; Hello_Sign_Status__c != &apos;signed&apos; &amp;&amp;  Hello_Sign_Admin_Status__c	= &apos;awaiting_signature&apos; &amp;&amp;  Schedule_Driver_Meeting__c = True, &apos;No&apos;,
 IF(ISPICKVAL(Insurance__c, &quot;Yes&quot;) &amp;&amp; Hello_Sign_Status__c = &apos;signed&apos; &amp;&amp;  Hello_Sign_Admin_Status__c	= &apos;signed&apos;  &amp;&amp; Schedule_Driver_Meeting__c = True , &apos;Yes&apos;, &apos;No&apos;) 				) 						)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Onboarding Status</label>
    <type>Text</type>
</CustomField>