force-app/main/default/objects/Contact/fields/Packet__c.field-meta.xml
<CustomField>
    <fullName>Packet__c</fullName>
    <label>Packet</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Admin Signed</fullName>
            </value>
            <value>
                <fullName>Sent to Driver</fullName>
                <default>true</default>
                <label>Sent to Driver</label>
            </value>
            <value>
                <fullName>Driver Signed</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>