force-app/main/default/objects/Contact/fields/Payroll_Period__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Period__c</fullName>
    <label>Payroll Period</label>
    <length>50</length>
    <type>Text</type>
</CustomField>