force-app/main/default/objects/Contact/fields/PL_Deactivated_Fixed_Amount__c.field-meta.xml
<CustomField>
    <fullName>PL_Deactivated_Fixed_Amount__c</fullName>
    <label>PL Deactivated Fixed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>