force-app/main/default/objects/Contact/fields/PL_Deactivated_Mileage__c.field-meta.xml
<CustomField>
    <fullName>PL_Deactivated_Mileage__c</fullName>
    <label>PL Deactivated Mileage</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>