force-app/main/default/objects/Contact/fields/Plan_Preview__c.field-meta.xml
<CustomField>
    <fullName>Plan_Preview__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Plan Preview</label>
    <type>Checkbox</type>
</CustomField>