force-app/main/default/objects/Contact/fields/Pre_Auto_Allowance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Pre_Auto_Allowance_Amount__c</fullName>
    <label>Pre Auto Allowance Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>