force-app/main/default/objects/Contact/fields/ReimbursementStatement__c.field-meta.xml
<CustomField>
    <fullName>ReimbursementStatement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ReimbursementStatement</label>
    <type>Checkbox</type>
</CustomField>