force-app/main/default/objects/Contact/fields/Reporting_Month__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Month__c</fullName>
    <label>Reporting Month</label>
    <type>DateTime</type>
</CustomField>