force-app/main/default/objects/Contact/fields/Schedule_Driver_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Driver_Meeting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used for verify client check schedule driver meeting.</description>
    <label>Schedule Driver Meeting</label>
    <type>Checkbox</type>
</CustomField>