force-app/main/default/objects/Contact/fields/Send_Email_For_Submitted_Mileage__c.field-meta.xml
<CustomField>
    <fullName>Send_Email_For_Submitted_Mileage__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Send Email For Submitted Mileage</description>
    <inlineHelpText>Send Email For Submitted Mileage</inlineHelpText>
    <label>Send Email For Submitted Mileage</label>
    <type>Checkbox</type>
</CustomField>