force-app/main/default/objects/Contact/fields/Send_Monthly_YTC_Admin__c.field-meta.xml
<CustomField>
    <fullName>Send_Monthly_YTC_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Monthly YTC Admin</label>
    <type>Checkbox</type>
</CustomField>