force-app/main/default/objects/Contact/fields/showTeamRecord__c.field-meta.xml
<CustomField>
    <fullName>showTeamRecord__c</fullName>
    <defaultValue>true</defaultValue>
    <label>showTeamRecord</label>
    <type>Checkbox</type>
</CustomField>