force-app/main/default/objects/Contact/fields/Sync_Feature__c.field-meta.xml
<CustomField>
    <fullName>Sync_Feature__c</fullName>
    <defaultValue>true</defaultValue>
    <description>To inform end users about new sync feature introduce in the system</description>
    <inlineHelpText>To inform end users about new sync feature introduce in the system</inlineHelpText>
    <label>Sync Feature</label>
    <type>Checkbox</type>
</CustomField>