force-app/main/default/objects/Contact/fields/System_Notification__c.field-meta.xml
<CustomField>
    <fullName>System_Notification__c</fullName>
    <formula>IF(CreatedDate &gt;= DATETIMEVALUE(&quot;2023-12-04 00:00:00&quot;) , &quot;New&quot;, &quot;Existing&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>System Notification</label>
    <type>Text</type>
</CustomField>