force-app/main/default/objects/Contact/fields/TestContact__c.field-meta.xml
<CustomField>
    <fullName>TestContact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TestContact</label>
    <type>Checkbox</type>
</CustomField>