force-app/main/default/objects/Contact/fields/Time_Attandance__c.field-meta.xml
<CustomField>
    <fullName>Time_Attandance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Time Attendance</label>
    <type>Checkbox</type>
</CustomField>