force-app/main/default/objects/Contact/fields/Tires__c.field-meta.xml
<CustomField>
    <fullName>Tires__c</fullName>
    <label>Tires</label>
    <precision>10</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>