force-app/main/default/objects/Contact/fields/Total_Annual_Reimbursement__c.field-meta.xml
<CustomField>
    <fullName>Total_Annual_Reimbursement__c</fullName>
    <label>Total Annual Reimbursement</label>
    <summarizedField>Employee_Reimbursement__c.Total_Monthly_Reimbursement__c</summarizedField>
    <summaryForeignKey>Employee_Reimbursement__c.Contact_Id__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>