force-app/main/default/objects/Contact/fields/Total_BiWeek_Mileage__c.field-meta.xml
<CustomField>
    <fullName>Total_BiWeek_Mileage__c</fullName>
    <label>Total BiWeek Mileage</label>
    <summarizedField>Bi_Weekly_Reimbursement__c.Total_Mileage__c</summarizedField>
    <summaryFilterItems>
        <field>Bi_Weekly_Reimbursement__c.Year__c</field>
        <operation>equals</operation>
        <value>2022</value>
    </summaryFilterItems>
    <summaryForeignKey>Bi_Weekly_Reimbursement__c.Contact__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>