force-app/main/default/objects/Contact/fields/Total_Imputed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Imputed_Amount__c</fullName>
    <label>Total Imputed Amount</label>
    <summarizedField>Employee_Reimbursement__c.Imputed_Amount_Calculation__c</summarizedField>
    <summaryFilterItems>
        <field>Employee_Reimbursement__c.Compliance_Year__c</field>
        <operation>equals</operation>
        <value>2023</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Employee_Reimbursement__c.Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </summaryFilterItems>
    <summaryForeignKey>Employee_Reimbursement__c.Contact_Id__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>