force-app/main/default/objects/Contact/fields/Total_Monthly_Costs__c.field-meta.xml
<CustomField>
    <fullName>Total_Monthly_Costs__c</fullName>
    <formula>Insurance_Rate__c + License_Ragistration__c + Taxes__c + Depreciation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>