force-app/main/default/objects/Contact/fields/Total_reimbursment__c.field-meta.xml
<CustomField>
    <fullName>Total_reimbursment__c</fullName>
    <inlineHelpText>only  current year  reimbursement total</inlineHelpText>
    <label>Total reimbursment</label>
    <summarizedField>Employee_Reimbursement__c.Total_Monthly_Reimbursement__c</summarizedField>
    <summaryFilterItems>
        <field>Employee_Reimbursement__c.YTD_year__c</field>
        <operation>equals</operation>
        <value>2024</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Employee_Reimbursement__c.Remove_Reimbursement__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Employee_Reimbursement__c.Contact_Id__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>