force-app/main/default/objects/Contact/fields/TrueDialog_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>TrueDialog_Contact_Id__c</fullName>
    <label>TrueDialog Contact Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>