force-app/main/default/objects/Contact/fields/Underpaid_Clients__c.field-meta.xml
<CustomField>
    <fullName>Underpaid_Clients__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Underpaid Clients</label>
    <type>Checkbox</type>
</CustomField>