force-app/main/default/objects/Contact/fields/Unread_Message_Count__c.field-meta.xml
<CustomField>
    <fullName>Unread_Message_Count__c</fullName>
    <label>Unread Message Count</label>
    <summaryFilterItems>
        <field>Message__c.Unread__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Message__c.Contacts__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>