force-app/main/default/objects/Contact/fields/Variable__c.field-meta.xml
<CustomField>
    <fullName>Variable__c</fullName>
    <formula>Monthly_Mileage__c  * Variable_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Variable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>