force-app/main/default/objects/Contact/fields/Vehicle_Value__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Value__c</fullName>
    <label>Vehicle Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>