force-app/main/default/objects/Contact/fields/Watch_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Watch_Meeting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Watch Meeting</label>
    <type>Checkbox</type>
</CustomField>