force-app/main/default/objects/Contact/fields/Webinar_Join_Time__c.field-meta.xml
<CustomField>
    <fullName>Webinar_Join_Time__c</fullName>
    <label>Webinar Join Time</label>
    <type>DateTime</type>
</CustomField>